[gd_scene load_steps=53 format=3 uid="uid://bm07kfvhuwoc4"]

[ext_resource type="Script" uid="uid://5u445832hqm1" path="res://scripts/player.gd" id="1_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bmr6hk3am2006" path="res://resources/assets/spritesheets/knight/_Attack2.png" id="2_dw050"]
[ext_resource type="Texture2D" uid="uid://2kpgr6hiqvny" path="res://resources/assets/spritesheets/knight/_Attack.png" id="3_b26j0"]
[ext_resource type="Texture2D" uid="uid://bn6hds4iqg215" path="res://resources/assets/spritesheets/knight/_Dash.png" id="4_n7ghd"]
[ext_resource type="Texture2D" uid="uid://ctgcmlk2g0qxw" path="res://resources/assets/spritesheets/knight/_Idle.png" id="5_nvl01"]
[ext_resource type="Texture2D" uid="uid://p2w5ggb873nv" path="res://resources/assets/spritesheets/knight/_TurnAround.png" id="6_ivps1"]
[ext_resource type="Texture2D" uid="uid://cyh35iuyx0udd" path="res://resources/assets/spritesheets/knight/_Run.png" id="7_urp6f"]
[ext_resource type="Script" uid="uid://c8g7tyflssi06" path="res://scripts/playermanager.gd" id="8_smehm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hh0fu"]
size = Vector2(18.5, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmqbl"]
atlas = ExtResource("2_dw050")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mchk4"]
atlas = ExtResource("2_dw050")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fws66"]
atlas = ExtResource("2_dw050")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkxkb"]
atlas = ExtResource("2_dw050")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8pa6"]
atlas = ExtResource("2_dw050")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bto7"]
atlas = ExtResource("2_dw050")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh0fu"]
atlas = ExtResource("3_b26j0")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_unr0g"]
atlas = ExtResource("3_b26j0")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt3n0"]
atlas = ExtResource("3_b26j0")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pfoh"]
atlas = ExtResource("3_b26j0")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ocxv"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r0o2"]
atlas = ExtResource("4_n7ghd")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m5ht"]
atlas = ExtResource("5_nvl01")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dubn7"]
atlas = ExtResource("5_nvl01")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_08kqv"]
atlas = ExtResource("5_nvl01")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ptj"]
atlas = ExtResource("5_nvl01")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsdmi"]
atlas = ExtResource("5_nvl01")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifa78"]
atlas = ExtResource("5_nvl01")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtx0q"]
atlas = ExtResource("5_nvl01")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kg8w"]
atlas = ExtResource("5_nvl01")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63s8"]
atlas = ExtResource("5_nvl01")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q20i"]
atlas = ExtResource("5_nvl01")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv8l0"]
atlas = ExtResource("6_ivps1")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6u5g"]
atlas = ExtResource("6_ivps1")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_coh8c"]
atlas = ExtResource("6_ivps1")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmyi7"]
atlas = ExtResource("7_urp6f")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey6mn"]
atlas = ExtResource("7_urp6f")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sxpt"]
atlas = ExtResource("7_urp6f")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pblkq"]
atlas = ExtResource("7_urp6f")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_22dhx"]
atlas = ExtResource("7_urp6f")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_diulx"]
atlas = ExtResource("7_urp6f")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuk1v"]
atlas = ExtResource("7_urp6f")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0qat"]
atlas = ExtResource("7_urp6f")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpu3o"]
atlas = ExtResource("7_urp6f")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3arh"]
atlas = ExtResource("7_urp6f")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_unr0g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmqbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mchk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fws66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkxkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8pa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bto7")
}],
"loop": false,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh0fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unr0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt3n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pfoh")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ocxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r0o2")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m5ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dubn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08kqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ptj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsdmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifa78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtx0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kg8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q20i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv8l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6u5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coh8c")
}],
"loop": true,
"name": &"turn_around",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmyi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey6mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sxpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pblkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22dhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuk1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0qat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpu3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3arh")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(21, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v2ag"]
size = Vector2(45, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2wvv"]
size = Vector2(75, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_fjrip"]
radius = 21.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smehm"]
size = Vector2(43, 11)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smehm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ur7pv"]
bg_color = Color(0.929412, 0.0352941, 0.105882, 1)

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_1jxqw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(3.25, -7)
shape = SubResource("RectangleShape2D_hh0fu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_unr0g")
animation = &"attack1"
offset = Vector2(0, -26)

[node name="Node" type="Node" parent="."]
script = ExtResource("8_smehm")

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(2.5, -11)
shape = SubResource("RectangleShape2D_fjrip")

[node name="sword_1" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="recttop" type="CollisionShape2D" parent="sword_1"]
position = Vector2(26.5, -29)
shape = SubResource("RectangleShape2D_3v2ag")

[node name="rectbottom" type="CollisionShape2D" parent="sword_1"]
position = Vector2(11.5, -9.5)
shape = SubResource("RectangleShape2D_d2wvv")

[node name="sword_2" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="circle2" type="CollisionShape2D" parent="sword_2"]
position = Vector2(37, -19)
shape = SubResource("CircleShape2D_fjrip")

[node name="rect2" type="CollisionShape2D" parent="sword_2"]
position = Vector2(13.5, -37.5)
shape = SubResource("RectangleShape2D_smehm")

[node name="healthbar" type="ProgressBar" parent="."]
offset_left = -17.0
offset_right = 7.0
offset_bottom = 2.0
theme_override_styles/background = SubResource("StyleBoxFlat_smehm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ur7pv")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
